Fix problem w overlapping sections

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ ul {
     overflow-y: auto;
     background-color: #F4F4F4;
     scroll-behavior: smooth;
+    padding: 0;
 }
 
 .circular_image {
@@ -113,6 +114,7 @@ ul li:hover {
     cursor: pointer;
 }
 
+
 .name_section {
     font-size: 64px;
     font-weight: 900;
@@ -126,11 +128,19 @@ ul li:hover {
 .section {
     display: flex;
     flex-direction: column;
-    height: 100%;
     justify-content: center;
     padding-left: 32px;
     padding-right: 32px;
-    padding-top: 16px;
+}
+
+.section:first-child, section:last-child {
+    padding-top: 25vh;
+    padding-bottom: 25vh;
+}
+
+.section:nth-child(2), section:nth-child(3) {
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .skills_container {
@@ -154,6 +164,7 @@ p {
     display: flex;
     flex-direction: row;
     margin-top: 24px;
+    flex-wrap: wrap;
 }
 
 .social_background {
@@ -238,9 +249,15 @@ hr {
     color: #2B2A2F;
 }
 
+.skill_rate_container {
+    display: flex;
+    flex-direction: row;
+}
+
 .iconify { 
     width: 48px; 
     height: 48px;
+    color: #2B2A2F;
 }
 
 .skill_content {
